# wazo-tools

./: .gitignore  .pre-commit-hooks.yaml  README.md
alembic-squash/: README.md  alembic-squash.py  generate-baseline-schema-dump.sh  process-sql-dump.py  script.py.mako.patch
alembic_squash/: README.md  alembic_squash.py  bootstrap.sh  generate_baseline_schema_dump.sh  process_sql_dump.py  requirements.txt  script.py.mako.patch  shell-init.sh  shell.sh
ami-tools/: amis.py  amispy
bus-tools/: generate-new-tenant-event.py  manage-resources.py  monitor-bus-delay.py  recv-bus-event.py  send-bus-event.py
check-ssl-certificate/: README.md  check-ssl-certificate.sh
compare-db/: README.md  compare-db-migrations.py  docker-compose.yml  migration-base-schema.sql  requirements.txt  setup.cfg  tox.ini
generate-calls/: generate-call.py
git-hooks/: changelog-check  copyright-check  local-docker-volume-check
integration-tests/: README.md  shell.sh
license-updater/: license-updater.py
log-analysis/: README.md  dhcp.ipynb
new-repo/: README-template.md  new-repo.py
openapi-synthesize/: README.md  openapi_synthesize.py  pyproject.toml  requirements.txt
phone-provisioning/: README.md  move-orphan-devices-to-master-tenant.py  unsign.py
pjsip/: fix-endpoint-sip-template-order.py  import-pjsip-config.py  sync-username-and-names.py
postgres/: list-stuck-pg-transactions.py
repo-check/: setup.py
switch-vlan/: switch-vlan.py
sync-ldap/: README.md  config.ini.default  sync-wazo-ldap.py
ws-tools/: recv-asterisk-ws-events.py  recv-wazo-ws-events.py
(+17 files in other folders)
